crates/tapir-script/compiler/src/compile/snapshots/compiler__compile__type_visitor__test__symtab_fail_snapshot_tests@booleans_fail.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/type_visitor.rs
expression: err_str
input_file: crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/booleans_fail.tapir
---
Error: Incorrect type, expected bool but got int
   ╭─[/home/gwilym/Projects/tapir-game-tools/crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/booleans_fail.tapir:1:1]
   │
 2 │ x = 4;
   │ ───┬──  
   │    ╰──── Incorrect type
───╯
Error: Incorrect type, expected bool but got int
   ╭─[/home/gwilym/Projects/tapir-game-tools/crates/tapir-script/compiler/src/compile/snapshot_tests/type_visitor/booleans_fail.tapir:1:1]
   │
 5 │ y = 8;
   │ ───┬──  
   │    ╰──── Incorrect type
───╯
